--- a/.github/release_drafter.yml
+++ b/.github/release_drafter.yml
@@ -10,6 +10,7 @@ categories:
   - title: '🧰 Maintenance'
     labels:
       - 'chore'
+      - 'documentation'
 change-template: '- $TITLE (#$NUMBER by @$AUTHOR)'
 change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
 version-resolver:
@@ -30,14 +31,35 @@ template: |
 
   $CHANGES
 autolabeler:
+  - label: 'python'
+    files:
+      - '*.py'
+  - label: 'rust'
+    files:
+      - '*.rs'
+  - label: 'documentation'
+    files:
+      - '*.md'
+  - label: 'dependencies'
+    files:
+      - '*.lock'
+      - 'pyproject.toml'
   - label: 'chore'
     branch:
       - '/chore\/.+/'
+    title:
+      - '/chore/i'
   - label: 'bug'
     branch:
       - '/bug\/.+/'
       - '/bugfix\/.+/'
       - '/hotfix\/.+/'
+    title:
+      - '/fix/i'
   - label: 'feature'
     branch:
       - '/feature\/.+/'
+
+
+
+# other labels: github_actions , python + support conv commits: feat: , build:, chore:, ci:, docs:, style:, refactor:, perf:, test:
