--- a/.github/release_drafter.yml
+++ b/.github/release_drafter.yml
@@ -6,11 +6,14 @@ categories:
       - 'feature'
   - title: '🐛 Bug Fixes'
     labels:
+      - 'fix'
+      - 'bugfix'
       - 'bug'
   - title: '🧰 Maintenance'
     labels:
       - 'chore'
       - 'documentation'
+      - 'dependencies'
 change-template: '- $TITLE (#$NUMBER by @$AUTHOR)'
 change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
 version-resolver:
