--- a/.github/workflows/release_drafter.yml
+++ b/.github/workflows/release_drafter.yml
@@ -4,22 +4,28 @@ on:
   push:
     branches:
       - main
+  # pull_request event is required only for autolabeler
   pull_request:
-    # pull_request event is required only for autolabeler
+    # Only following types are handled by the action, but one can default to all as well
     types: [opened, reopened, synchronize]
 
 permissions:
-  pull-requests: write
-  id-token: write
+  contents: read
 
 jobs:
   update_release_draft:
+    permissions:
+      # write permission is required to create a github release
+      contents: write
+      # write permission is required for autolabeler
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      # Drafts your next Release notes as Pull Requests are merged into "main"
-      - uses: release-drafter/release-drafter@v5
-        with:
-          config-name: release_drafter.yml
-          disable-autolabeler: false
+      # Drafts your next Release notes as Pull Requests are merged into "master"
+      - uses: release-drafter/release-drafter@v6
+        # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
+        # with:
+        #   config-name: my-config.yml
+        #   disable-autolabeler: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
