--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -55,9 +55,11 @@ autolabeler:
       - '/bug\/.+/'
       - '/bugfix\/.+/'
       - '/hotfix\/.+/'
+      - '/fix\/.+/'
   - label: 'feature'
     branch:
       - '/feature\/.+/'
+      - '/feat\/.+/'
 
 
 
