change icon in draft

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,4 +1,4 @@
-name-template: 'v$RESOLVED_VERSION 🌈'
+name-template: 'v$RESOLVED_VERSION 🚀'
 tag-template: 'v$RESOLVED_VERSION'
 categories:
   - title: '✨ Features'
@@ -15,7 +15,7 @@ categories:
       - 'documentation'
       - 'dependencies'
 change-template: '- $TITLE (#$NUMBER by @$AUTHOR)'
-change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
+change-title-escapes: '\<*_&'
 version-resolver:
   major:
     labels:
