--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -33,7 +33,7 @@ template: |
   ## What's changed
 
   $CHANGES
-autolabeler:
+autolabeler: # assign labels to pr according to files having changed
   - label: 'python'
     files:
       - '*.py'
