feat: add front autolabelling for PRs when frontend files change

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -47,5 +47,12 @@ autolabeler: # assign labels to pr according to files having changed
     files:
       - '*.lock'
       - 'pyproject.toml'
-
-# other labels: github_actions
+  - label: 'front'
+    files:
+      - '*.ts'
+      - '*.tsx'
+      - '*.html'
+      - '*.css'
+  - label: 'github_actions'
+    files:
+      - '.github/**'
