--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -10,10 +10,15 @@ categories:
       - 'fix'
       - 'bugfix'
       - 'bug'
-  - title: '🧰 Maintenance'
+  - title: '🔨 Maintenance'
+    collapse-after: 5
     labels:
       - 'chore'
       - 'documentation'
+      - 'github_actions'
+  - title: '⬆️ Dependencies'
+    collapse-after: 3
+    labels:
       - 'dependencies'
 change-template: '- $TITLE (#$NUMBER by @$AUTHOR)'
 change-title-escapes: '\<*_&'
