--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -58,8 +58,8 @@ autolabeler: # assign labels to pr according to files having changed
   - label: 'dependencies'
     files:
       - '*.lock'
-      - 'pyproject.toml'
-      - 'requirements.txt'
+      - '**/pyproject.toml'
+      - '**/requirements.txt'
   - label: 'front'
     files:
       - '*.ts'
